--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,7 @@
+
 footer {
     background-color: #333;
-    color: #fff;
+    color: white;
     padding: 20px 0;
     text-align: center;
     flex-shrink: 0;
@@ -10,25 +11,26 @@ footer {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .footer-content p {
-    margin: 5px 0;
+    margin: 0;
 }
 
 .social-links {
-    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .social-icon {
-    display: inline-block;
-    color: #fff;
+    color: white;
     text-decoration: none;
     margin: 0 10px;
 }
 
 .social-icon:hover {
-    text-decoration: none;
-    color: gray;
+    color: #ccc;
 }
